--- a/hyperspace/html_templates/bounty_editor_email_template.html
+++ b/hyperspace/html_templates/bounty_editor_email_template.html
@@ -8,7 +8,7 @@
   You suggested the {OldBountyName} project be updated to:
   <h3>Bounty: {BountyReward}</h3>
   <h3>Bounty Name: {BountyName}</h3>
-  <h3>Benefactor: {Benefactor}</h3>
+  <h3>Recipient: {Recipient}</h3>
   <h3>Due Date: {DueDate}</h3>
   <h3>Reference Material: {ReferenceMaterial}</h3>
   <h3>Bounty Description:</h3>
