--- a/hyperspace/html_templates/bounty_submission_form.html
+++ b/hyperspace/html_templates/bounty_submission_form.html
@@ -55,18 +55,18 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Benefactor:</label>
+              <label>Recipient:</label>
               <small id="bountyRewardHelp" class="form-text text-muted">
-                The benefactor will be the recipient of the completed bounty's products.
+                The recipient will be delivered with the results of the bounty
               </small>
-              <input type="text" class="form-control" id="Benefactor" name="Benefactor" required data-validation-required-message="Please enter a name for the recipient of the bounty">
+              <input type="text" class="form-control" id="Recipient" name="Recipient" required data-validation-required-message="Please enter a name for the recipient of the bounty">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Contact Benefactor at:</label>
+              <label>Contact Recipient at:</label>
               <small id="bountyRewardHelp" class="form-text text-muted">
-                Provide a valid email address at which to contact the benefactor. This will be used to collect payment and complete delivery.
+                Provide a valid email address at which to contact the recipient. This will be used to collect payment and complete delivery.
               </small>
               <input type="email" class="form-control" id="Contact" name="Contact" required data-validation-required-message="Please enter an email address for the recipient of the bounty">
             </div>
