--- a/hyperspace/html_templates/bounty_submission_response_template.html
+++ b/hyperspace/html_templates/bounty_submission_response_template.html
@@ -19,7 +19,7 @@
   <div class="container" id="bounty_submitted" style="margin-top: 60px; margin-bottom: 30px">
     <div class="row">
       <h3>Your bounty was submitted!!!</h3><br>
-      <h4>Follow the instructions in the confirmation email (sent to {benefactor_email}) to publish your bounty to the MakUrSpace network</h4>
+      <h4>Follow the instructions in the confirmation email (sent to {recipient_email}) to publish your bounty to the MakUrSpace network</h4>
     </div>
   </div>
   <!-- Footer -->
