--- a/hyperspace/html_templates/bountyboard_card_iframe.html
+++ b/hyperspace/html_templates/bountyboard_card_iframe.html
@@ -4,7 +4,7 @@
 </a-scene>'''></iframe>
   </a>
   <div class="card-body">
-    <p class="card-reward">{bounty_reward}</p>
+    <p class="card-reward-date">{bounty_reward}{bounty_due_date}</p>
     <h4 class="card-title">
       <a class="bounty-link" href="/rest/rendered_bounty/{bounty_id}" id="card-title-link" target="_top">{bounty_name}</a>
     </h4>
