--- a/hyperspace/html_templates/submission.html
+++ b/hyperspace/html_templates/submission.html
@@ -89,7 +89,7 @@
 
     <div class="jumbotron">
       <h1 class="display-1">Success!</h1>
-      <p>(insert benefactor), your bounty has been successfully submited. Please check your email for additional information!</p>
+      <p>(insert recipient), your bounty has been successfully submited. Please check your email for additional information!</p>
   </div>
   <!-- /.container -->
 
