--- a/static/bounty.html
+++ b/static/bounty.html
@@ -32,7 +32,7 @@
               <p>MakUrSpace's makers make things whether we ask them to or not. They've long ago exhausted the mind's inherent dopamine pathways for manifesting their own dreams. So, we come to you -- filament in hand -- and ask: do you have any dreams we can make real?</p>
               <p>Define a project here, with a description, reference images, STL files, links to Pinterest boards, a scanned copy of your HOA Articles of 
               Incorporation and any personal diaries. Whatever you want -- it's all optional!</p>
-              <p>What is required is a unique name for the project and the name and email of who gets it (the bounty's benefactor).</p>
+              <p>What is required is a unique name for the project and the name and email of who gets it (the bounty's Recipient).</p>
               <p>We'll review the project and more than likely post it to our bounty board. From there, one or more of our makers will take up the hunt for that sweet, sweet dopamine!</p>
               <p>Expect no timeline, updates, or general customer support; rejoice when you get something approaching all 3!</p>
               <p>And if you loved the whole experience, consider dropping a donation <a href="https://opencollective.com/makurspace/donate">here</a> -- or subscribing <a href="https://opencollective.com/makurspace/tiers">here</a>!</p>
@@ -73,18 +73,18 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Benefactor:</label>
+              <label>Recipient:</label>
               <small id="bountyRewardHelp" class="form-text text-muted">
-                The benefactor is the recipient of the completed bounty's products.
+                The Recipient is the recipient of the completed bounty's products.
               </small>
-              <input type="text" class="form-control" id="Benefactor" name="Benefactor" required data-validation-required-message="Please enter a name for the recipient of the bounty">
+              <input type="text" class="form-control" id="Recipient" name="Recipient" required data-validation-required-message="Please enter a name for the recipient of the bounty">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Contact Benefactor at:</label>
+              <label>Contact Recipient at:</label>
               <small id="bountyRewardHelp" class="form-text text-muted">
-                Provide a valid email address at which to contact the benefactor. This will be used to complete delivery.
+                Provide a valid email address at which to contact the Recipient. This will be used to complete delivery.
               </small>
               <input type="email" class="form-control" id="Contact" name="Contact" required data-validation-required-message="Please enter an email address for the recipient of the bounty">
             </div>
