--- a/hyperspace/html_templates/bounty_suggestion_email_template.html
+++ b/hyperspace/html_templates/bounty_suggestion_email_template.html
@@ -7,7 +7,7 @@
   {editor} suggested your bounty be updated to:
   <h3>Bounty: {BountyReward}</h3>
   <h3>Bounty Name: {BountyName}</h3>
-  <h3>Benefactor: {Benefactor}</h3>
+  <h3>Recipient: {Recipient}</h3>
   <h3>Reference Material: {ReferenceMaterial}</h3>
   <h3>Bounty Description:</h3>
   <p>{BountyDescription}</p>
