--- a/hyperspace/html_templates/bountyboard_card.html
+++ b/hyperspace/html_templates/bountyboard_card.html
@@ -1,7 +1,7 @@
 <div class="card col-lg-4 col-sm-6 bounty-item mx-1 mb-2" onclick="location.href='/rest/rendered_bounty/{bounty_id}';" align="left" href="/rest/rendered_bounty/{bounty_id}">
   <a class="bounty-link" href="/rest/rendered_bounty/{bounty_id}" target="_top"><img class="card-img-top" src="{primary_image}" alt="{bounty_name} primary image"></a>
   <div class="card-body">
-    <p class="card-reward">{bounty_reward}</p>
+    <p class="card-reward-date">{bounty_reward}{bounty_due_date}</p>
     <h4 class="card-title">
       <a class="bounty-link" href="/rest/rendered_bounty/{bounty_id}" id="card-title-link" target="_top">{bounty_name}</a>
     </h4>
